Turbo Rango sem o banco rodando

--- a/src/TurboRango/TurboRango.Dominio/TurboRango.Dominio.csproj
+++ b/src/TurboRango/TurboRango.Dominio/TurboRango.Dominio.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>TurboRango.Dominio</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -44,6 +45,7 @@
     <Compile Include="Contato.cs" />
     <Compile Include="Categoria.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\StringExtensions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
