--- a/src/TurboRango/TurboRango.Dominio/TurboRango.Dominio.csproj
+++ b/src/TurboRango/TurboRango.Dominio/TurboRango.Dominio.csproj
@@ -40,11 +40,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Categoria.cs" />
+    <Compile Include="Classificacao.cs" />
     <Compile Include="Contato.cs" />
     <Compile Include="Entidade.cs" />
     <Compile Include="Localizacao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Restaurante.cs" />
+    <Compile Include="Utils\EnumExtensions.cs" />
     <Compile Include="Utils\StringExtensions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
